# clavfrancais-linux

./: .gitignore  Cargo.toml  README.md  example.xml
src/: bus.rs  bus_builder.rs  component.rs  engine.rs  engine_desc.rs  factory.rs  flags.rs  lib.rs  main.rs  modifier.rs  preedit_lose_focus.rs  special_keys.rs  text.rs  text_attribute.rs  utils.rs
src/proxies/: mod.rs
